--- a/app/views/atividades/_form.html.erb
+++ b/app/views/atividades/_form.html.erb
@@ -58,10 +58,10 @@
 </FIELDSET>
 
 <div class="botao_left">
-    <%= f.submit "Enviar", :class=>"botao", :id=>'id_botao' %>
+    <%= f.submit "Enviar", :class=>"botaoVerde", :id=>'id_botao' %>
 </div>
 
 <div class="botao_left">
-    <%= link_to t('links.back'), aluno_index_path, :class=>"botao", :id=>'id_botao' %>
+    <%= link_to t('links.back'), aluno_index_path, :class=>"botaoVerde", :id=>'id_botao' %>
 </div>
 <% end %>
