--- a/app/views/alunos/index.html.erb
+++ b/app/views/alunos/index.html.erb
@@ -34,8 +34,8 @@
 <div id="HomeAtividadesPage">
   <div  height='150px'>
     <% if current_aluno.atividades.empty? %>
-      <div id="notice">
-        <center><%= t('.without_activities')%><br /><%= link_to t('.new_activitie'), new_atividade_path%></center>
+      <div class="notice">
+        <%= t('.without_activities')%>&nbsp<%= link_to t('.new_activitie'), new_atividade_path, :class=>"botaoAzul"%>
       </div>
     <% else %>
       <div id="listaAtividadesHome">
