--- a/app/views/alunos/profileimage.html.erb
+++ b/app/views/alunos/profileimage.html.erb
@@ -20,11 +20,11 @@
     <br>
     <br></FIELDSET>
     <div class="botao_left">
-        <span class="luz"><%= l.submit t('.send'), :class=>"botao", :id=>'id_botao' %></span>
+        <span class="luz"><%= l.submit t('.send'), :class=>"botaoVerde", :id=>'id_botao' %></span>
     </div>
     
     <div class="botao_left">
-        <%= link_to t('links.back'), aluno_index_path,:class=>"botao", :id=>'id_botao' %>
+        <%= link_to t('links.back'), aluno_index_path,:class=>"botaoVerde", :id=>'id_botao' %>
     </div>
 <%- end -%>
 
