Alterações na interface e Validações em Modalidade

--- a/app/views/avaliadores/_form.html.erb
+++ b/app/views/avaliadores/_form.html.erb
@@ -1,65 +1,64 @@
-<FIELDSET>
-  <LEGEND><h1><label><%= t 'avaliadores.list_avaliators.new'%></label></h1></LEGEND>
-<%= form_for(@avaliador) do |f| %>
-  <% if @avaliador.errors.any? %>
+<% if @avaliador.errors.any? %>
     <div id="error_explanation">
       <%= t 'general.form_error' %>
     </div>
-  <% end %>
-  <div class="field">
+<% end %>
+<FIELDSET>
+  <LEGEND><h1><label><%= t 'avaliadores.list_avaliators.new'%></label></h1></LEGEND>
+<%= form_for(@avaliador) do |f| %>
     <%= f.label :nome %><br />
-    <%= f.text_field :nome %>
-    <%= error_tag @avaliador, :nome %>
-  </div>
-  <div class="field">
+    <div class="field">
+      <%= f.text_field :nome %>
+      <%= error_tag @avaliador, :nome %>
+    </div>
     <%= f.label :matricula %><br />
-    <%= f.text_field :matricula %>
-    <%= error_tag @avaliador, :matricula %>
-  </div><br />
-  <div class="field">
+    <div class="field">
+      <%= f.text_field :matricula %>
+      <%= error_tag @avaliador, :matricula %>
+    </div><br />
+
     <%= f.label :titulacao %><br />
-     <%= f.text_field :titulacao %>
-    <%= error_tag @avaliador, :titulacao %>
-  </div>
+    <div class="field">
+      <%= f.text_field :titulacao %>
+      <%= error_tag @avaliador, :titulacao %>
+    </div>
   
-  <div class="field">
-    <%= f.label :sexo %>
-    <DIV class="radio_component">
-      <%= f.radio_button :sexo, t('labels._masc') %>
-      <label id="ident">&nbsp<%= t('labels._masc') %></label>
-      <%= f.radio_button :sexo, t('labels._feme') %>
-      <label id="ident">&nbsp<%= t('labels._feme') %></label>
-      <%= error_tag @avaliador, :sexo %>
-    </DIV>
-  </div>
+    <div class="field">
+      <%= f.label :sexo %>
+      <DIV class="radio_component">
+        <%= f.radio_button :sexo, t('labels._masc') %>
+        <label id="ident">&nbsp<%= t('labels._masc') %></label><BR />
+        <%= f.radio_button :sexo, t('labels._feme') %>
+        <label id="ident">&nbsp<%= t('labels._feme') %></label>
+        <%= error_tag @avaliador, :sexo %>
+      </DIV>
+    </div>
 
-  <div class="field">
     <%= f.label :admin %><br />
-    <DIV class="radio_component">
-      <%= f.radio_button :admin, 1 %><label id="ident">&nbsp<%= t('labels._yes')%></label>
-      <%= f.radio_button :admin, 0 %><label id="ident">&nbsp<%= t('labels._no')%></label>
-    </DIV>
-  </div>
+    <div class="field">
+      <DIV class="radio_component">
+        <%= f.radio_button :admin, 1 %><label id="ident">&nbsp<%= t('labels._yes')%></label><BR />
+        <%= f.radio_button :admin, 0 %><label id="ident">&nbsp<%= t('labels._no')%></label>
+      </DIV>
+    </div>
 
-  <div class="field">
-      <%= f.label :email %><BR />
-      <%= f.email_field :email, :placeholder => "example@example.com" %>
-      <%= error_tag @avaliador, :email %>
-  </div>
+    <%= f.label :email %><BR />
+    <div class="field">
+        <%= f.email_field :email, :placeholder => "example@example.com" %>
+        <%= error_tag @avaliador, :email %>
+    </div>
 
-  <div class="field">
-      <%= f.label :password %><BR />
+    <%= f.label :password %><BR />
+    <div class="field">
       <%= f.password_field :password, :placeholder => t('form_messages.password'), :size=>"33" %>
       <%= error_tag @avaliador, :password %>
-  </div>
-
-  </FIELDSET>  
-  <div class="botao_left">
-    <span class="luz">
-      <%= f.submit t('links.send'), :class=>"botao", :id=>'id_botao' %>
-    </span>
-  </div>
-  <div class="botao_left">
-            <%= link_to t('links.back'), avaliadores_index_path, :class=>"botao", :id=>'id_botao' %>
     </div>
+  <BR />
+  </FIELDSET>
+  <div class="botao_left">
+      <%= f.submit t('links.send'), :class=>"botaoVerde", :id=>'id_botao' %>
+  </div>
+  <div class="botao_left">
+    <%= link_to t('links.back'), avaliadores_index_path, :class=>"botaoVerde", :id=>'id_botao' %>
+  </div>
 <% end %>
