--- a/app/views/modalidades/_form.html.erb
+++ b/app/views/modalidades/_form.html.erb
@@ -6,30 +6,28 @@
     </label>
   </p>
 </strong>
+<% if @modalidade.errors.any? %>
+  <div id="error_explanation" class="alert">
+    <%= t 'general.form_error' %>
+  </div>
+<% end %>
 <FIELDSET>
    <LEGEND>
       <label><%= t 'modalidades.new.title'%></label>
     </LEGEND>
-  <%= form_for(@modalidade) do |f| %>
-    <% if @modalidade.errors.any? %>
-      <div id="error_explanation">
-        <%= t 'general.form_error' %>
-      </div>
-    <% end %>
-
-    <div class="field">
-      <%= f.label :title %><i id="red">*</i><BR />
-      <%= f.text_area:title %>
-      <%= error_tag @modalidade, :title %>
-    </div><br />
-    
+      <%= form_for(@modalidade) do |f| %>
+        <%= f.label :title %><i id="red">*</i><BR />
+        <div class="field">
+          <%= f.text_area:title %>
+          <%= error_tag @modalidade, :title %>
+        </div><br />
 </FIELDSET>
 
 <div class="botao_left">
-    <%= f.submit "Enviar", :class=>"botao", :id=>'id_botao' %>
+    <%= f.submit "Enviar", :class=>"botaoVerde", :id=>'id_botao' %>
 </div>
 
 <div class="botao_left">
-    <%= link_to t('links.back'), modalidades_index_path, :class=>"botao", :id=>'id_botao' %>
+    <%= link_to t('links.back'), modalidades_index_path, :class=>"botaoVerde", :id=>'id_botao' %>
 </div>
 <% end %>
