--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,12 @@
 	  	<%= stylesheet_link_tag    :application, :media => :all %>
 	  	<%= javascript_include_tag :application %>
 	  	<%= javascript_include_tag :all %>
+		<%= javascript_include_tag "jquery-1.4.4.min.js" %>
+		<%= javascript_include_tag "jquery.maskedinput.js" %>
+		<%= javascript_include_tag "jquery.js" %>
+		<%= javascript_include_tag "jquery-easing-1.3.pack.js" %>
+		<%= javascript_include_tag "jquery-easing-compatibility.1.2.pack.js" %>
+		<%= javascript_include_tag "jquery.kwicks-1.5.1.pack.js" %>
 	  	<%= csrf_meta_tags %>
 	  	<%= yield(:head) %>
 	</head>
