Realocação do metodo Alterar Senha.. e atualização de interface..

--- a/app/views/alunos/password.html.erb
+++ b/app/views/alunos/password.html.erb
@@ -1,17 +1,18 @@
+<% if @aluno.errors.any? %>
+  <div id="error_explanation">
+    <%= t 'general.form_error' %>
+  </div>
+<% end %>
+
 <FIELDSET>
-    <LEGEND><H1><label><%= t('alunoes.mypassword.edit') %></label></H1></LEGEND>
-<DIV id="localization">
+    <LEGEND><H1><label><%= t('alunos.password.edit') %></label></H1></LEGEND>
 
 <%= form_for(@aluno, :url=>{:action=>'changepassword'}, :html => { :method => :put }) do |f| %>
-     <% if @aluno.errors.any? %>
-        <div id="error_explanation">
-          <%= t 'general.form_error' %>
-        </div>
-    <% end %>
+     
 
     <div class="field">
         <%= f.label :password %><br />
-        <i id="blue" class="small"><%= t('alunos.changepassword.edit') %></i><BR />
+        <i id="blue" class="small"><%= t('alunos.password.leave_if_you_dont_wanna_change') %></i><BR />
         <%= f.password_field :password %>
         <%= error_tag @aluno, :password %>
     </div>
@@ -31,10 +32,10 @@
     <br>
     <br></FIELDSET>
     <div class="botao_left">
-        <span class="luz"><%= f.submit t('alunos.profileimage.send'), :class=>"botao", :id=>'id_botao' %></span>
+        <%= f.submit t('alunos.profileimage.send'), :class=>"botaoVerde", :id=>'id_botao' %>
     </div>
     
     <div class="botao_left">
-      <%= link_to t('links.back'), aluno_index_path, :class=>"botao", :id=>'id_botao' %>
+      <%= link_to t('links.back'), aluno_index_path, :class=>"botaoVerde", :id=>'id_botao' %>
     </div>
 <%- end -%>
