--- a/app/views/alunos/registrations/new.html.erb
+++ b/app/views/alunos/registrations/new.html.erb
@@ -28,7 +28,7 @@
         <%= l.label :sexo %>
         <DIV class="radio_component">
               <%= l.radio_button :sexo, t('labels._masc') %>
-              <label id="ident">&nbsp<%= t('labels._masc') %></label>
+              <label id="ident">&nbsp<%= t('labels._masc') %></label><BR />
               <%= l.radio_button :sexo, t('labels._feme') %>
               <label id="ident">&nbsp<%= t('labels._feme') %></label>
               <%= error_tag @aluno, :sexo %>
