Alteração de insterface em alteração de senha

--- a/app/assets/stylesheets/session.css.scss
+++ b/app/assets/stylesheets/session.css.scss
@@ -35,6 +35,15 @@ section.session
   margin-left: 20px;
 }
 
+section.passwordChange{
+  margin-top: -120px;
+  margin-left: 20px;
+}
+
+p#passwordchange{
+  text-align: center;
+}
+
 font#registration
 {
     font:bold 30px Arial, Helvetica, sans-serif;
