Alterações do commit anterior que não tinha ido

--- a/app/views/alunos/index.html.erb
+++ b/app/views/alunos/index.html.erb
@@ -1,4 +1,5 @@
-<div id="aluno_logado" class="button">
+<BR />
+<div class="button">
 <fieldset>
     <legend ><%= t '.signed_in' %></legend>
       <div id="facemenu">
