--- a/app/views/avaliadores/index.html.erb
+++ b/app/views/avaliadores/index.html.erb
@@ -1,5 +1,7 @@
-<div id="aluno_logado" class="button">
+<div class="button">
+
 <fieldset>
+	<BR />
 	<legend ><%= t('.signed_in') %></legend>
 	<div id="facemenu">
 		<ul>
