Alterações do commit anterior que não tinha ido

--- a/app/views/alunos/_home_atividades.html.erb
+++ b/app/views/alunos/_home_atividades.html.erb
@@ -39,7 +39,7 @@
                         </td>
                     <% end %>
                     <td id="td1">
-                        <%= link_to t('links.destroy'), excluir_atividade_path(atividade), 
+                        <%= link_to t('links.destroyActivitie'), excluir_atividade_path(atividade), 
                         :method => :delete, :confirm => 'Tem Certeza?'  %>
                     </td>
 		</tr>
