--- a/app/views/alunos/_listar_atividades.html.erb
+++ b/app/views/alunos/_listar_atividades.html.erb
@@ -47,7 +47,7 @@
 
                 <td><%= link_to t('links.show'), atividade %></td>
                 <td>
-                   <%= link_to t('links.destroy'), excluir_atividade_path(atividade), :method => :delete, :confirm => t('messages.areyousure')  %>
+                   <%= link_to t('links.destroyActivitie'), excluir_atividade_path(atividade), :method => :delete, :confirm => t('messages.areyousure')  %>
                 </td>
              </tr>
 
