--- a/app/views/alunos/index.html.erb
+++ b/app/views/alunos/index.html.erb
@@ -1,7 +1,7 @@
 <BR />
 <div class="button">
 <fieldset>
-    <legend ><%= t '.signed_in' %></legend>
+    <legend ><%= label_tag t('.signed_in') %></legend>
       <div id="facemenu">
         <ul> 
           <li>
