--- a/app/assets/stylesheets/app_design.css
+++ b/app/assets/stylesheets/app_design.css
@@ -475,7 +475,7 @@ a.stylish{color:#fff;}
   border-radius:         20px;
 }
 
-div #facemenu ul { margin: 0; padding: 0; list-style: none; width: 150px; }
+div #facemenu ul { margin: 0; padding: 0; list-style: none; width: 170px; }
 
 div #facemenu ul li { position: relative;}
 
@@ -488,6 +488,7 @@ div #facemenu ul li a {
     padding: 5px;
     border: 1px solid #ccc;
     border-bottom: 0;
+    font-size: 16px;
     background: #fff;
     text-align:center;
 }
@@ -506,7 +507,7 @@ div #facemenu ul {
     margin: 0;
     padding: 0;
     list-style: none;
-    width: 150px;
+    width: 160px;
     border-bottom: 1px solid #ccc;
 }
 
