--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,14 +21,12 @@
 		<!-- header -->
   	<div class="header">
       <div id="imagelogo"><%= image_tag("IFFLOGO3.png",:width=>'450') %></div>
-      <font face="NewStencil">
       	<div class="headername">
-      		<div id="info">INFORMÁTICA</div>
+      		<font face="TechFont">I</font><font face="proFont">nformática</font>
       	</div>
-      </font>
-  		<span class="signin">
-        <%= render 'layouts/header' %>
-      </span>
+	  		<span class="signin">
+	        <%= render 'layouts/header' %>
+	      </span>
     </div>
 
             
