--- a/app/assets/stylesheets/app_design.css
+++ b/app/assets/stylesheets/app_design.css
@@ -498,6 +498,7 @@ div #facemenu ul li a {
     border: 1px solid #ccc;
     border-bottom: 0;
     background: #fff;
+    font-size: 16px;
     text-align:center;
 }
 
@@ -515,7 +516,7 @@ div #facemenu ul {
     margin: 0;
     padding: 0;
     list-style: none;
-    width: 150px;
+    width: 160px;
     border-bottom: 1px solid #ccc;
 }
 
