--- a/app/views/alunos/index.html.erb
+++ b/app/views/alunos/index.html.erb
@@ -1,6 +1,6 @@
-<BR />
+<BR /><BR />
 <div class="button">
-<fieldset>
+<fieldset class='toplevel'>
     <legend ><%= label_tag t('.signed_in') %></legend>
       <div id="facemenu">
         <ul> 
@@ -45,3 +45,4 @@
     <% end %>           
   </div>
 </div>
+<BR /><BR />
