--- a/app/views/alunos/registrations/new.html.erb
+++ b/app/views/alunos/registrations/new.html.erb
@@ -66,7 +66,7 @@
     </div>
 
     <%= l.label :password_confirmation %><i id="red">*</i>
-    <div class="field">
+    <div class="session">
         <%= l.password_field :password_confirmation %>
         <%= error_tag @aluno, :password_confirmation %>
     </div>
